--- a/src/components/Theme/Theme.module.scss
+++ b/src/components/Theme/Theme.module.scss
@@ -1,1 +1,12 @@
 @import "../../common/styles/variables";
+
+.icon {
+  font-size: 20px;
+  color: var(#{--iconsDefault});
+  transition: .2s ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    //transform: scale(1.2);
+  }
+}
