dark mode icon button add to icons

--- a/src/components/Header/SocialIcons/SocialIcons.module.scss
+++ b/src/components/Header/SocialIcons/SocialIcons.module.scss
@@ -3,10 +3,9 @@
 .socialIcons {
   display: flex;
   align-items: center;
+  gap: 15px;
 
   .iconLink {
-    margin-right: 15px;
-
     .cd, .tg, .git, .link {
       font-size: 20px;
       color: var(#{--iconsDefault});
