change mobile buttons color

--- a/src/common/styles/variables.scss
+++ b/src/common/styles/variables.scss
@@ -16,7 +16,7 @@ $boxShadowDark: #8a8888;
 $iconsLight: #4d555a;
 $iconsDark: #ffffff;
 $buttonsLight: #212529;
-$buttonsDark: #73777a;
+$buttonsDark: #f5df50;
 
 :root {
   --bgPrimaryLight: #{$backgroundPrimaryColorLight};
