change shadow color

--- a/src/common/styles/variables.scss
+++ b/src/common/styles/variables.scss
@@ -12,7 +12,7 @@ $textColorDark: #FFFFFF;
 $textColorSecondaryLight: rgba(0, 0, 0, 0.5);
 $textColorSecondaryDark: #a49f9f;
 $boxShadowLight: #E7E7E7;
-$boxShadowDark: #8a8888;
+$boxShadowDark: #3d3a3a;
 $iconsLight: #4d555a;
 $iconsDark: #ffffff;
 $buttonsLight: #212529;
