--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -25,6 +25,7 @@
 
       h3 {
         background-color: #f5df4f;
+        color: #000000;
         padding: 0 8px;
         font-weight: lighter;
         font-size: 15px;
