--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -21,6 +21,12 @@
       font-size: 40px;
     }
 
+    h3 {
+      font-size: 16px;
+      font-weight: normal;
+      margin: 10px 0;
+    }
+
     p {
       font-size: 21px;
       margin: 24px 0;
