--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -165,3 +165,34 @@
     border-radius: 5px;
   }
 }
+
+.loadingWrapper {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //bottom: 1px;
+  //right: 1px;
+}
+
+.loading {
+  border: 3.5px solid #f3f3f3;
+  border-top: 3.5px solid $textColor;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1.3s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
