--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -169,14 +169,15 @@
 .loadingWrapper {
   position: absolute;
   z-index: 1;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.1);
+  width: 105%;
+  height: 105%;
+  background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  //bottom: 1px;
-  //right: 1px;
+  top: -16px;
+  right: -8px;
+  border-radius: 10px;
 }
 
 .loading {
