--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -94,7 +94,7 @@
   .btnView {
     position: absolute;
     width: 100%;
-    opacity: 0;
+    visibility: hidden;
     bottom: 0;
 
     button {
@@ -115,7 +115,7 @@
     }
 
     @media screen and (max-width: 1199px) {
-      opacity: 1;
+      visibility: visible;
     }
   }
 
