--- a/src/components/Contacts/Alert/Alert.module.scss
+++ b/src/components/Contacts/Alert/Alert.module.scss
@@ -1,38 +1,38 @@
-@import "../../../common/styles/variables";
+@import '../../../common/styles/variables';
 
 .wrapper {
-    position: fixed;
-    width: 35%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 15px;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 16px;
+  position: fixed;
+  width: 35%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 16px;
+  background-color: var(#{--bgSecondaryDefault});
+  color: var(#{--textDefault});
+  border-radius: 4px;
+  box-shadow: 0 0 5px 2px var(#{--boxShadowDefault});
+  z-index: 1;
+
+  .text {
+  }
+
+  @media screen and (max-width: 767px) {
+    width: 50%;
+  }
+
+  @media screen and (max-width: 575px) {
+    width: 90%;
+  }
+
+  .btn {
+    border: none;
+    cursor: pointer;
     background-color: var(#{--bgSecondaryDefault});
-    color: var(#{--textDefault});
-    border-radius: 4px;
-    box-shadow: 0 0 5px 2px var(#{--boxShadowDefault});
-    z-index: 1;
-
-    .text {
-    }
-
-    @media screen and (max-width: 767px) {
-        width: 50%;
-    }
-
-    @media screen and (max-width: 575px) {
-        width: 90%;
-    }
-
-    .btn {
-        border: none;
-        cursor: pointer;
-        background-color: var(#{--bgSecondaryDefault});
-        font-size: 25px;
-        color: goldenrod;
-    }
+    font-size: 25px;
+    color: goldenrod;
+  }
 }
