--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,33 @@
 .App {
-    line-height: 1.2;
-    letter-spacing: -0.02em;
-    min-width: 360px;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+  min-width: 360px;
 }
 
 ::selection {
-    background-color: #f5df50;
-    color: #FFFFFF;
+  background-color: #f5df50;
+  color: #ffffff;
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #c1c1c1;
-    border-radius: 5px;
-    border: 2px solid #f1f1f1;
+  background-color: #c1c1c1;
+  border-radius: 5px;
+  border: 2px solid #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    border: none;
-    background-color: #ababab;
+  border: none;
+  background-color: #ababab;
 }
 
 ::-webkit-scrollbar-thumb:active {
-    background-color: #4b4b4b;
+  background-color: #4b4b4b;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
