--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -1,4 +1,4 @@
-@import "../../common/styles/variables";
+@import '../../common/styles/variables';
 
 .contactsBlock {
   background-color: $primaryColor;
@@ -111,7 +111,7 @@
           background-color: #3d3d3d;
         }
 
-        &:active{
+        &:active {
           background-color: #d7c446;
           color: #000000;
           border: 1px solid #000000;
@@ -212,6 +212,3 @@
     }
   }
 }
-
-
-
