--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -1,4 +1,4 @@
-@import "../../../common/styles/variables";
+@import '../../../common/styles/variables';
 
 .project {
   background-color: var(#{--bgPrimaryDefault});
@@ -29,7 +29,7 @@
       position: relative;
       background-size: cover;
       background-position: center;
-      transition: all .8s cubic-bezier(0.42, 0, 0.58, 1);
+      transition: all 0.8s cubic-bezier(0.42, 0, 0.58, 1);
 
       &:before {
         content: '';
@@ -108,7 +108,7 @@
       font-size: 16px;
       transition: 0.5s;
 
-      &:active{
+      &:active {
         background-color: #f5df50;
         color: #000000;
       }
