--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,4 +1,4 @@
-@import "../../common/styles/variables";
+@import '../../common/styles/variables';
 
 .projectsBlock {
   background-color: var(#{--bgSecondaryDefault});
