--- a/src/components/Theme/Theme.module.scss
+++ b/src/components/Theme/Theme.module.scss
@@ -1,9 +1,9 @@
-@import "../../common/styles/variables";
+@import '../../common/styles/variables';
 
 .icon {
   font-size: 20px;
   color: var(#{--iconsDefault});
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
   cursor: pointer;
 
   &:hover {
