--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -19,17 +19,23 @@
   .getInTouch {
     h2 {
       font-size: 40px;
+      margin: 0 0 30px;
     }
 
     h3 {
-      font-size: 16px;
+      font-size: 21px;
+      margin: 0 0 8px;
+    }
+
+    h4 {
+      font-size: 18px;
       font-weight: normal;
-      margin: 10px 0;
+      margin: 0 0 30px;
     }
 
     p {
       font-size: 21px;
-      margin: 24px 0;
+      margin: 0 0 24px;
       line-height: 1.8;
     }
 
