--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -45,9 +45,9 @@
     background-color: var(#{--bgPrimaryDefault});
     width: 80%;
     z-index: 1;
-    top: calc(50% - -125px);
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 69px;
+    left: 0;
+    right: 0;
     padding: 15px;
     box-shadow: 0 2px 10px 1px var(#{--boxShadowDefault});
   }
