--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -54,6 +54,50 @@
       padding: 20px 0;
     }
 
+    .cv {
+      margin: 30px 0 0;
+      display: flex;
+      align-items: center;
+      gap: 30px;
+
+      button {
+        background-color: $backgroundPrimaryColorDark;
+        color: #FFFFFF;
+        border: 1px solid #f5df50;
+        padding: 0.75rem 3rem;
+        cursor: pointer;
+        transition: 0.5s;
+        font-family: 'Poppins-Regular', 'Golos_Text', sans-serif;
+        font-size: 16px;
+        box-shadow: 0 5px 15px rgba(0,0,0,.15);
+
+        &:hover {
+          background-color: #424649;
+        }
+
+        &:active {
+          background-color: #d7c446;
+          color: #000000;
+          border: 1px solid #000000;
+        }
+      }
+
+      a {
+        color: black;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
+
+      h3 {
+        display: flex;
+        align-items: center;
+        font-weight: normal;
+        gap: 10px;
+      }
+    }
+
     p {
       font-size: 21px;
     }
