--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import './common/styles/variables';
+
 .App {
   line-height: 1.2;
   letter-spacing: -0.02em;
@@ -14,20 +16,16 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #c1c1c1;
+  background-color: var(#{--scrollbarMainDefault});
   border-radius: 5px;
-  border: 2px solid #f1f1f1;
+  border: 2px solid var(#{--bgSecondaryDefault});
 }
 
 ::-webkit-scrollbar-thumb:hover {
   border: none;
-  background-color: #ababab;
-}
-
-::-webkit-scrollbar-thumb:active {
-  background-color: #4b4b4b;
+  background-color: var(#{--scrollbarMainDefault});
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: var(#{--bgPrimaryDefault});
 }
