--- a/src/components/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/ScrollToTop/ScrollToTop.module.scss
@@ -17,9 +17,15 @@
 }
 
 .icon {
-  font-size: 30px;
+  font-size: 35px;
   color: var(#{--iconsDefault});
   background-color: var(#{--bgPrimaryDefault});
   border-radius: 50px;
   padding: 2px;
+  transition: 0.3s;
+  opacity: 0.5;
+
+  &:hover {
+    opacity: 1;
+  }
 }
