--- a/src/components/Resume/Resume.module.scss
+++ b/src/components/Resume/Resume.module.scss
@@ -83,6 +83,37 @@
       }
     }
 
+    .button button {
+      margin-top: 48px;
+      background-color: var(#{--bgPrimaryDefault});
+      color: var(#{--textDefault});
+      border: 2px solid var(#{--textDefault});
+      padding: 0.75rem 2.5rem;
+      cursor: pointer;
+      transition: 0.5s;
+      font-family: 'Poppins-Regular', 'Golos_Text', sans-serif;
+      font-size: 16px;
+      font-weight: 700;
+      box-shadow: 0 5px 15px rgba(0,0,0,.15);
+
+      &:hover {
+        background-color: var(#{--iconsDefault});
+        color: var(#{--bgPrimaryDefault});
+        border: 2px solid var(#{--iconsDefault});
+      }
+
+      &:active {
+        background-color: #d7c446;
+        color: #000000;
+        border: 2px solid #000000;
+      }
+
+      @media screen and (max-width: 575px) {
+        margin-top: 0;
+      }
+
+    }
+
     @media screen and (max-width: 575px) {
       padding: 50px 0;
     }
