change project bg

--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,7 +1,7 @@
 @import '../../common/styles/variables';
 
 .projectsBlock {
-  background-color: var(#{--bgSecondaryDefault});
+  background-color: var(#{--bgPrimaryDefault});
   color: var(#{--textDefault});
 
   .wrapper {
