--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -83,7 +83,7 @@
       transition: all 0.3s ease-in-out;
 
       &:hover {
-        color: $primaryColor;
+        color: #e3c818;
       }
     }
 
