add aboutMe component

--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -32,6 +32,38 @@
       }
     }
 
+    .infoBlock {
+      display: grid;
+      grid-template-columns: 3fr 1fr;
+      gap: 100px;
+
+      .name {
+        font-size: 32px;
+        position: relative;
+
+        &::after {
+          content: 'Sergey Smith';
+          font-weight: 700;
+          position: absolute;
+          left: 100px;
+          width: 210px;
+          border-bottom: 3px solid #f5df4f;
+          transition: 0.2s ease-in-out;
+          padding: 0 0 6px 0;
+        }
+
+        &:hover::after {
+          transform: translateX(3%) scaleX(1);
+        }
+      }
+
+      p {
+        margin-top: 16px;
+        font-size: 21px;
+        line-height: 1.8;
+      }
+    }
+
 
     @media screen and (max-width: 575px) {
       .wrapper {
