--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -57,6 +57,34 @@
         }
       }
 
+      .numbers {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+
+        .number {
+          font-size: 150px;
+          z-index: 1;
+        }
+
+        .circle {
+          position: absolute;
+          left: 30%;
+          top: 0;
+          width: 120px;
+          height: 120px;
+          border-radius: 50%;
+          background-color: $primaryColor;
+          display: inline-block;
+          margin-right: 10px;
+        }
+
+        .numberText {
+          font-size: 28px;
+        }
+      }
+
       p {
         margin-top: 16px;
         font-size: 21px;
