--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -92,6 +92,10 @@
       }
     }
 
+    .personalBlock {
+      display: flex;
+    }
+
 
     @media screen and (max-width: 575px) {
       .wrapper {
