--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -66,6 +66,10 @@
         .number {
           font-size: 150px;
           z-index: 1;
+
+          @media screen and (max-width: 991px) {
+            transform: translate(0, 20%);
+          }
         }
 
         .circle {
@@ -86,6 +90,12 @@
           @media screen and (max-width: 1199px) {
             left: 20%;
           }
+
+          @media screen and (max-width: 991px) {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
         }
 
         .numberText {
@@ -101,8 +111,8 @@
       }
 
       @media screen and (max-width: 991px) {
-        display: flex;
-        flex-direction: column;
+        grid-template-columns: 1fr;
+        gap: 0;
       }
     }
 
