--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -166,6 +166,10 @@
             margin-top: 10px;
             font-size: 18px;
             font-weight: 700;
+
+            a {
+              color: var(#{--textDefault});
+            }
           }
         }
 
